--- a/docs/_sass/content-table.scss
+++ b/docs/_sass/content-table.scss
@@ -1,6 +1,7 @@
 .content {
   padding-right: 40px;
   flex: 1 1 auto;
+  overflow: hidden;
 }
 
 .content-wrapper {
